ada yang berubah

--- a/FormPage.html
+++ b/FormPage.html
@@ -18,7 +18,7 @@
                 Furniture</a>
             </div>
             <ul class="kiri">
-                <li><a href="HomePage.html">Beranda</a></li>
+                <li><a href="index.html">Beranda</a></li>
                 <li><a href="FormPage.html"> Form Page</a></li>
                 <li><a href="AditionalPage.html">Product</a></li>
             </ul>
